# W23-Euchre-Reinforcement-Learning

./: README.md  euchreDMC.py  euchreDQN.py  euchreEvaluate.py  euchreExtracter.py  euchreTest.py  euchreTestV2.py  main.py  mistakes.txt  pyproject.toml  requirements.txt  test_euchre_game.py
experiments/dmc_result/euchre/: fields.csv  logs.csv  meta.json
experiments/euchre_dqn_v2.2_result/: log.txt  performance.csv
experiments/euchre_dqn_v2.3_result/: log.txt  performance.csv
experiments/euchre_dqn_v2.4_result/: log.txt  performance.csv
experiments/euchre_dqn_v2.5_result/: log.txt  performance.csv
experiments/euchre_dqn_v2.6_result/: log.txt  performance.csv
experiments/euchre_dqn_v2.7_result/: log.txt
rlcard/: __init__.py  toms_notes.txt
rlcard/agents/: __init__.py  cfr_agent.py  dqn_agent.py  nfsp_agent.py  pettingzoo_agents.py  random_agent.py
rlcard/envs/: __init__.py  blackjack.py  bridge.py  env.py  euchre.py  leducholdem.py  limitholdem.py  nolimitholdem.py  registration.py
rlcard/games/: base.py
rlcard/models/: __init__.py  bridge_rule_models.py  doudizhu_rule_models.py  euchre_rule_models.py  gin_rummy_rule_models.py  leducholdem_rule_models.py  limitholdem_rule_models.py  model.py  pretrained_models.py  registration.py  uno_rule_models.py
rlcard/utils/: __init__.py  logger.py  pettingzoo_utils.py  seeding.py  utils.py
tutorials/DP/: DP-On-Tutorial.py
tutorials/MC/: MC-On-Tutorial.py
tutorials/TD/: TD-On-Tutorial.py
tutorials/solutions/: DP-On-Tutorial-Soln.py  MC-On-Tutorial-Soln.py  TD-On-Tutorial-Soln.py
(+55 files in other folders)
