[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Michael Peng", email = "michael@mcmoo.org"},
]
dependencies = [
    "py==1.11.0",
    "pycodestyle==2.9.1",
    "pydocstyle==6.1.1",
    "pylint==2.14.5",
    "pyparsing==3.0.9",
    "pytest==7.1.2",
    "requests==2.28.1",
    "numpy==1.23.0",
    "pandas==1.4.4",
    "torch>=1.13.1",
    "pip>=23.0.1",
    "matplotlib>=3.7.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
